--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <span>Total clicks: 0</span>
-    <button id="btn">Click me</button>
+    <div id="root"></div>
   </body>
-  <script>
-    let counter = 0;
-    const button = document.querySelector("#btn");
-    const span = document.querySelector("span");
-    function handleClick() {
-      counter = counter + 1;
-      span.innerText = `Total clicks: ${counter}`;
-    }
-    button.addEventListener("click", handleClick);
+  <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
+    const root = document.querySelector("#root");
+    const Title = (
+      <h3 id="title" onMouseEnter={() => console.log("Mouse Enter")}>
+        Hello I'm a title
+      </h3>
+    );
+    const Button = (
+      <button
+        onClick={() => console.log("I'm Clicked")}
+        style={{ backgroundColor: "teal" }}
+      >
+        Click me
+      </button>
+    );
+    const container = React.createElement("div", null, [Title, Button]);
+    ReactDOM.render(container, root);
   </script>
 </html>
