--- a/vanilla.html
+++ b/vanilla.html
@@ -1,29 +1,17 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <div id="root"></div>
+    <span>Total clicks: 0</span>
+    <button id="btn">Click me</button>
   </body>
-  <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script>
-    const root = document.querySelector("#root");
-    const h3 = React.createElement(
-      "h3",
-      {
-        id: "title",
-        onMouseEnter: () => console.log("Mouse Enter"),
-      },
-      "Hello I'm a span"
-    );
-    const btn = React.createElement(
-      "button",
-      {
-        onClick: () => console.log("I'm Clicked"),
-        style: { backgroundColor: "teal" },
-      },
-      "Click me"
-    );
-    const container = React.createElement("div", null, [h3, btn]);
-    ReactDOM.render(container, root);
+    let counter = 0;
+    const button = document.querySelector("#btn");
+    const span = document.querySelector("span");
+    function handleClick() {
+      counter = counter + 1;
+      span.innerText = `Total clicks: ${counter}`;
+    }
+    button.addEventListener("click", handleClick);
   </script>
 </html>
