#2.6 JSX part Two

--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.querySelector("#root");
-    const Title = (
-      <h3 id="title" onMouseEnter={() => console.log("Mouse Enter")}>
-        Hello I'm a title
-      </h3>
-    );
-    const Button = (
+    function Title() {
+      return (
+        <h3 id="title" onMouseEnter={() => console.log("Mouse Enter")}>
+          Hello I'm a title
+        </h3>
+      );
+    }
+
+    const Button = () => (
       <button
         onClick={() => console.log("I'm Clicked")}
         style={{ backgroundColor: "teal" }}
@@ -21,7 +24,11 @@
         Click me
       </button>
     );
-    const container = React.createElement("div", null, [Title, Button]);
-    ReactDOM.render(container, root);
+    const Container = () => (
+      <div>
+        <Title /> <Button />
+      </div>
+    );
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
