--- a/index.html
+++ b/index.html
@@ -8,22 +8,15 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.querySelector("#root");
-    let counter = 0;
-    function countUp() {
-      counter = counter + 1;
-      Renter();
-    }
-    function Renter() {
-      ReactDOM.render(<Container />, root);
-    }
-    function Container() {
+    function App() {
+      const [counter, modifier] = React.useState(0);
       return (
         <div>
           <h3>Total clicks: {counter}</h3>
-          <button onClick={countUp}>Click me</button>
+          <button>Click me</button>
         </div>
       );
     }
-    Renter();
+    ReactDOM.render(<App />, root);
   </script>
 </html>
