--- a/index.html
+++ b/index.html
@@ -9,24 +9,37 @@
   <script type="text/babel">
     const root = document.querySelector("#root");
     function App() {
-      const [minutes, setMinutes] = React.useState();
+      const [minutes, setMinutes] = React.useState(0);
       const onChange = (event) => {
         setMinutes(event.target.value);
+      };
+      const onClick = () => {
+        setMinutes(0);
       };
       return (
         <div>
           <h1>Super Converter</h1>
-          <label for="minutes">Minutes</label>
-          <input
-            value={minutes}
-            id="minutes"
-            placeholder="Minutes"
-            type="Number"
-            onChange={onChange}
-          />
-          <h4>You want convert {minutes}</h4>
-          <label for="hours">Hours</label>
-          <input id="hours" placeholder="Hours" type="Number" />
+          <div>
+            <label for="minutes">Minutes</label>
+            <input
+              value={minutes}
+              id="minutes"
+              placeholder="Minutes"
+              type="Number"
+              onChange={onChange}
+            />
+          </div>
+          <div>
+            <label for="hours">Hours</label>
+            <input
+              value={Math.round(minutes / 60)}
+              id="hours"
+              placeholder="Hours"
+              type="Number"
+              disabled
+            />
+          </div>
+          <button onClick={onClick}>Reset</button>
         </div>
       );
     }
