--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <script type="text/babel">
     const root = document.querySelector("#root");
     function App() {
-      const [minutes, setMinutes] = React.useState(0);
+      const [amount, setAmount] = React.useState(0);
+      const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
-        setMinutes(event.target.value);
+        setAmount(event.target.value);
       };
-      const onClick = () => {
-        setMinutes(0);
+      const reset = () => setAmount(0);
+      const onFlip = () => {
+        reset();
+        setFlipped((current) => !current);
       };
       return (
         <div>
@@ -22,24 +25,27 @@
           <div>
             <label for="minutes">Minutes</label>
             <input
-              value={minutes}
+              value={flipped ? amount * 60 : amount}
               id="minutes"
               placeholder="Minutes"
               type="Number"
               onChange={onChange}
+              disabled={flipped}
             />
           </div>
           <div>
             <label for="hours">Hours</label>
             <input
-              value={Math.round(minutes / 60)}
+              value={flipped ? amount : Math.round(amount / 60)}
               id="hours"
               placeholder="Hours"
               type="Number"
-              disabled
+              disabled={!flipped}
+              onChange={onChange}
             />
           </div>
-          <button onClick={onClick}>Reset</button>
+          <button onClick={reset}>Reset</button>
+          <button onClick={onFlip}>Flip</button>
         </div>
       );
     }
