#3.9 Final Practice and Recap

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.querySelector("#root");
-    function App() {
+    function MinutesToHours() {
       const [amount, setAmount] = React.useState(0);
       const [inverted, setInverted] = React.useState(false);
       const onChange = (event) => {
@@ -21,7 +21,6 @@
       };
       return (
         <div>
-          <h1>Super Converter</h1>
           <div>
             <label for="minutes">Minutes</label>
             <input
@@ -48,6 +47,24 @@
           <button onClick={onInvert}>
             {inverted ? "Turn Back" : "Invert"}
           </button>
+        </div>
+      );
+    }
+    function App() {
+      const [amount, setAmount] = React.useState(0);
+      const [inverted, setInverted] = React.useState(false);
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      };
+      const reset = () => setAmount(0);
+      const onInvert = () => {
+        reset();
+        setInverted((current) => !current);
+      };
+      return (
+        <div>
+          <h1>Super Converter</h1>
+          <MinutesToHours />
         </div>
       );
     }
